...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <!-- Settings Button -->
    <ImageButton
        android:id="@+id/profile_settings_button"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/ic_settings"
        android:contentDescription="@string/settings_button_description"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="fitCenter"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragment_container"
        app:layout_constraintVertical_bias="1">

        <!-- Profile Picture -->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile_picture_imageView"
            android:layout_width="200dp"
...
