...
    <string name="settings_page_title">Settings</string>
    <string name="push_notification_settings_page_header">Push Notification Settings</string>
    <string name="notifications_from_organizers">Enable Notifications from Organizers</string>
    <string name="notifications_from_admin">Enable Notifications from Admin</string>
    <string name="terms_conditions_header">Click Here For Terms &amp; Conditions</string>
    <string name="terms_conditions_text">T</string>
    <string name="logout_button_text">Log Out</string>
    <string name="delete_profile_button_text">Delete Profile</string>
    <string name="back_button_text">Back</string>

    <!-- Strings related to Terms & Conditions -->
    <string name="terms_conditions_title"><![CDATA[📄 Terms & Conditions — Event Lottery System]]></string>
    <string name="last_updated">Last Updated: November 3rd, 2025</string>
...
