<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_qrcode"
        android:icon="@drawable/ic_qr_code"
        android:title="QR Code" />

    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="Notifications" />

    <item
        android:id="@+id/nav_event_search"
        android:icon="@drawable/ic_home"
        android:title="Search" />

    <item
        android:id="@+id/nav_my_events"
        android:icon="@drawable/ic_event"
        android:title="My Events" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="Profile" />
</menu>


